force-app/main/default/objects/Product2/fields/DocumentosCompletado__c.field-meta.xml
<CustomField>
    <fullName>DocumentosCompletado__c</fullName>
    <description>Lista de documentos que debe completar el asesor</description>
    <inlineHelpText>Lista de documentos que debe completar el asesor</inlineHelpText>
    <label>Documentos para completado básico</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DocumentosRequeridos</valueSetName>
    </valueSet>
</CustomField>