force-app/main/default/objects/Product2/fields/DocumentosContratacion__c.field-meta.xml
<CustomField>
    <fullName>DocumentosContratacion__c</fullName>
    <description>Lista de documentos imprescindibles en la contratación</description>
    <inlineHelpText>Lista de documentos imprescindibles en la contratación</inlineHelpText>
    <label>Documentos para contratación</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DocumentosRequeridos</valueSetName>
    </valueSet>
</CustomField>