force-app/main/default/objects/Product2/fields/DuracionEntrevista__c.field-meta.xml
<CustomField>
    <fullName>DuracionEntrevista__c</fullName>
    <description>Duración de la entrevista en minutos</description>
    <inlineHelpText>Duración de la entrevista en minutos</inlineHelpText>
    <label>Duración entrevista</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>