force-app/main/default/objects/Product2/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>Campo id externo, el standard de Salesforce no permite realizar operaciones de upsert al no estar definido como externalId</description>
    <externalId>true</externalId>
    <label>Id externo</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>