force-app/main/default/objects/Product2/fields/HojaEncargoPorDefecto__c.field-meta.xml
<CustomField>
    <fullName>HojaEncargoPorDefecto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Hoja de encargo que tiene por defecto cada producto que se puede contratar a través de la comunidad</description>
    <label>Hoja de Encargo por defecto</label>
    <referenceTo>HojaEncargo__c</referenceTo>
    <relationshipLabel>Productos</relationshipLabel>
    <relationshipName>Productos</relationshipName>
    <type>Lookup</type>
</CustomField>