force-app/main/default/objects/Product2/fields/ImportePF__c.field-meta.xml
<CustomField>
    <fullName>ImportePF__c</fullName>
    <description>Provisión de fondos del producto</description>
    <label>Importe Pago Inicial</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>