force-app/main/default/objects/Product2/fields/ResponsableRedaccion__c.field-meta.xml
<CustomField>
    <fullName>ResponsableRedaccion__c</fullName>
    <description>Contiene el nombre del responsable de la redacción de la demanda</description>
    <label>Responsable de Redacción</label>
    <length>255</length>
    <type>Text</type>
</CustomField>