force-app/main/default/objects/Product2/fields/ResponsableViabilidad__c.field-meta.xml
<CustomField>
    <fullName>ResponsableViabilidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Responsable del análisis de viabilidad</description>
    <inlineHelpText>Responsable del análisis de viabilidad</inlineHelpText>
    <label>Responsable estudio viabilidad</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Productos</relationshipName>
    <type>Lookup</type>
</CustomField>