force-app/main/default/objects/Product2/fields/Tipo_Categoria__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Categoria__c</fullName>
    <description>Categoría del producto para las diferentes agrupaciones en Reportes y analíticas.</description>
    <inlineHelpText>Categoría del producto para informes, paneles y analíticas</inlineHelpText>
    <label>Tipo Categoría</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BANCARIO</fullName>
            </value>
            <value>
                <fullName>NO BANCARIO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>