force-app/main/default/objects/Product2/fields/Tipo_Familia__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Familia__c</fullName>
    <description>Familia del producto para las diferentes agrupaciones en Reportes y analíticas.</description>
    <inlineHelpText>Familia del producto para informes, paneles y analíticas</inlineHelpText>
    <label>Tipo Familia</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_Subcategoria__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A.P. PENSIÓN</fullName>
            </value>
            <value>
                <fullName>ACCIDENTES TRÁFICO</fullName>
            </value>
            <value>
                <fullName>ACCIONES</fullName>
            </value>
            <value>
                <fullName>AFS</fullName>
            </value>
            <value>
                <fullName>ASESORAMIENTO CONTRATOS</fullName>
            </value>
            <value>
                <fullName>ATÍPICO</fullName>
            </value>
            <value>
                <fullName>AVAL PERSONAL</fullName>
            </value>
            <value>
                <fullName>BONOS</fullName>
            </value>
            <value>
                <fullName>CÁRTEL DE COCHES</fullName>
            </value>
            <value>
                <fullName>CLAUSULAS SUELO</fullName>
            </value>
            <value>
                <fullName>COMISIONES ABUSIVAS</fullName>
            </value>
            <value>
                <fullName>CONTRATO FINANCIERO</fullName>
            </value>
            <value>
                <fullName>CUOTAS PARTICIPATIVAS</fullName>
            </value>
            <value>
                <fullName>DEUDA</fullName>
            </value>
            <value>
                <fullName>DIVORCIO</fullName>
            </value>
            <value>
                <fullName>FICHEROS IMPAGADOS ACCESO</fullName>
            </value>
            <value>
                <fullName>FICHEROS IMPAGADOS RECLAMACIÓN</fullName>
            </value>
            <value>
                <fullName>FONDO INVERSIÓN</fullName>
            </value>
            <value>
                <fullName>GASTOS HIPOTECA</fullName>
            </value>
            <value>
                <fullName>GOWEX</fullName>
            </value>
            <value>
                <fullName>HERENCIA</fullName>
            </value>
            <value>
                <fullName>INCAPACIDAD JUDICIAL</fullName>
            </value>
            <value>
                <fullName>IRPH</fullName>
            </value>
            <value>
                <fullName>MONITORIO</fullName>
            </value>
            <value>
                <fullName>MULTIDIVISA</fullName>
            </value>
            <value>
                <fullName>OBS</fullName>
            </value>
            <value>
                <fullName>OPOSICION EJECUCION HIPOTECARIA</fullName>
            </value>
            <value>
                <fullName>PAGARE</fullName>
            </value>
            <value>
                <fullName>PP</fullName>
            </value>
            <value>
                <fullName>PRESTAMOS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>