force-app/main/default/objects/Product2/fields/Tipo_Subcategoria__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Subcategoria__c</fullName>
    <description>Subcategoría del producto para las diferentes agrupaciones en Reportes y analíticas.</description>
    <inlineHelpText>Subcategoría del producto para informes, paneles y analíticas</inlineHelpText>
    <label>Tipo Subcategoría</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_Categoria__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>A.P. PENSIÓN</fullName>
            </value>
            <value>
                <fullName>HIPOTECAS</fullName>
            </value>
            <value>
                <fullName>INSTITUCIONALES</fullName>
            </value>
            <value>
                <fullName>MONITORIO</fullName>
            </value>
            <value>
                <fullName>OTROS</fullName>
            </value>
            <value>
                <fullName>PARTICULARES</fullName>
            </value>
            <value>
                <fullName>PRESTAMOS</fullName>
            </value>
            <value>
                <fullName>TARJETAS</fullName>
            </value>
            <value>
                <fullName>VALORES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>