force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>ExternalId__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>DuracionEntrevista__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>ImportePF__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>DocumentosContratacion__c</columns>
    <columns>DocumentosCompletado__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos los productos</label>
</ListView>