force-app/main/default/objects/Product2/listViews/Todos_los_productos_Campos_Categor_a.listView-meta.xml
<ListView>
    <fullName>Todos_los_productos_Campos_Categor_a</fullName>
    <columns>ExternalId__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Tipo_Categoria__c</columns>
    <columns>Tipo_Subcategoria__c</columns>
    <columns>Tipo_Familia__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos los productos Campos Categoría</label>
    <sharedTo>
        <role>Admin</role>
    </sharedTo>
</ListView>